the first step in shit

--- a/stylesheets/style_ws_new.css
+++ b/stylesheets/style_ws_new.css
@@ -109,11 +109,11 @@ button {
 /*}*/
 
 .page_container {
-    width: 95%; /* ширина основного блока */
+    width: 95%; /* пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅ */
     min-width: 590px;
-    /*height: 100%; /* высота для наглядности */
-    background: #fff; /* цвет блока для наглядности */
-    margin: 0 auto; /* задаем отступ слева и справа auto чтобы сработало выравнивание по центру */
+    /*height: 100%; /* пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ */
+    background: #fff; /* пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ */
+    margin: 0 auto; /* пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅ пїЅ пїЅпїЅпїЅпїЅпїЅпїЅ auto пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ */
     margin-top: 0px;
     display: table;
 }
@@ -122,22 +122,16 @@ button {
     background-color: #fff;
     height: 80px;
     width: 100%;
-    min-width: 590px;
     border-bottom: 5px solid rgb(236, 236, 236);
-    display: table;
-
 }
 
 .top-info {
     width: 100%;
-    min-width: 800px;
-    height: 35px;
     line-height: 35px;
     border-bottom: 1px solid rgb(236, 236, 236);
     color: #4d4d4d;
-    font-size: 11px;
+    font-size: 12px;
     text-transform: uppercase;
-    display: table;
 }
 
 .blok_main {
@@ -223,14 +217,14 @@ button {
 .blok_main_2_2 {
     float: left;
     background-color: #fff;
-    width: 10%; /* якщо переноситься, то встановити теж 90% або 100 і 100 для двох блоків*/
+    width: 10%; /* пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ, пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ 90% пїЅпїЅпїЅ 100 пїЅ 100 пїЅпїЅпїЅ пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅ*/
     word-wrap: break-word;
 }
 
-.blok_main_2_2_new_line { /*коли елемент вже перенесений*/
+.blok_main_2_2_new_line { /*пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ*/
     float: left;
     background-color: #fff;
-    width: 100%; /* якщо переноситься, то встановити теж 90% або 100 і 100 для двох блоків*/
+    width: 100%; /* пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ, пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ 90% пїЅпїЅпїЅ 100 пїЅ 100 пїЅпїЅпїЅ пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅ*/
 }
 
 .blok_main_2_1_x {
