--- a/stylesheets/shop.css
+++ b/stylesheets/shop.css
@@ -1315,47 +1315,27 @@ height: expression(document.body.scrollHeight > document.body.offsetHeight ? doc
 
 
 .top-line-adr{
+	margin-left: 22%;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
-	position:relative;
-	display: table-cell;
-	width: 150px;
-	white-space: nowrap;
-	
+
 }
 
 .top-line-delivery{
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 12px;
-	position:relative;
+	color: #4d4d4d;
 	text-decoration: underline;
-	cursor: pointer;
-	display: table-cell;
-	width: 150px;
-		white-space: nowrap;
-	
-}
-
-.top-line-delivery:hover{
+	margin-left: 9%;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
-	position:relative;
-	color: #FF6666;
-	text-decoration: none;
-	cursor: pointer;
-	display: table-cell;
-	width: 150px;
 }
-
-
+.top-line-delivery:hover{
+	color: #FF6666;
+}
 
 .top-phone{
+	margin-left: 15%;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 13px;
-	display: table-cell;
-	width: 200px;
-	white-space: nowrap;
-	
 }
 
 
