corrected first page

--- a/stylesheets/menu-vertical-root.css
+++ b/stylesheets/menu-vertical-root.css
@@ -1,168 +1,135 @@
 
-#menu-v-root li, #menu-v-root a {zoom:1;} /* Hacks for IE6, IE7 */
+#menu-v-root li, #menu-v-root a {
+    zoom: 1;
+}
 
-.menu-v-root-hid, #menu-v-root ul
-{
-    /*width: 330px; !* Main Menu Item widths *!*/
+/* Hacks for IE6, IE7 */
+
+.menu-v-root-hid, .subCategory {
     border: 1px solid #ccc;
-    border-top:none;
-    position: absolute; font-size:0;
+    border-top: none;
     list-style: none;
     margin: 0;
     padding: 0;
-    display:block;
-    z-index:9;
-	visibility:visible;
-}                
-.menu-v-root-vis, #menu-v-root ul
-{
-    /*width: 330px;  */
+    display: block;
+    z-index: 9;
+}
+
+.menu_categories{
+    position: relative;
     border: 1px solid #ccc;
-    border-top:none;
-    position: absolute; font-size:0;
-    list-style: none; margin: 0; padding: 0; display:block;
-    z-index:9;
-	visibility:visible;
+    border-top: none;
+    margin: 0;
+    padding: 0;
+    z-index: 9;
 }
 
-.cat_but{
-	z-index:10;
-	position:relative;
-	margin-left: 5px;
- 	padding: 0;
-	border:0;
-	text-align: left;
+.subCategory {
+    position: absolute;
+    border: 1px solid #ccc;
+    border-top: none;
+    margin: 0;
+    padding: 0;
+    z-index: 9;
+}
+
+.menu_categories__item{
+    position: relative;
+    top: 0;
+    right: -10px;
 }
 
 
+
+.cat_but {
+    z-index: 10;
+    position: relative;
+    margin-left: 5px;
+    padding: 0;
+    border: 0;
+    text-align: left;
+}
 
 /* Top level menu links style
 ---------------------------------------*/
-#menu-v-root li
-{
+#menu-v-root li {
+    position: relative;
     background: #FFF url(images/bg.gif) repeat-x 0 2px;
 
     padding-left: 14px;
 }
 
-
-#menu-v-root li a
-{
+#menu-v-root li a {
     font: normal 14px Arial;
     border-top: 1px solid #ccc;
     display: block;
-    /*overflow: auto; force hasLayout in IE7 */
     color: #06C;
     text-decoration: none;
-    line-height:35px;
-    /*padding-left:26px;            */
+    line-height: 35px;
 }
 
-#menu-v-root li a:hover
-{
+#menu-v-root li a:hover {
     color: #FF6666;
 }
 
-#menu-v-root ul li a
-{
-    line-height:35px;
+#menu-v-root ul li a {
+    line-height: 35px;
 }
 
-#menu-v-root ul li a:hover
-{
+#menu-v-root ul li a:hover {
     color: #FF6666;
 }
-                
-#menu-v-root li a.arrow:hover
-{
-    background-image:url(images/arrowon.gif);
-    background-repeat: no-repeat;
-    background-position: 97% 50%;
+
+#menu-v-root li a.arrow:hover {
+    background: url(images/arrowon.gif) no-repeat 97% 50%;
     color: #FF6666;
-    
 }
-        
+
 /*Sub level menu items
 ---------------------------------------*/
-#menu-v-root li ul
-{
-    position: absolute;
-    width: 330px; /*Sub Menu Items width */
-    visibility:hidden;
-    
+
+.menu_categories a.arrow {
+    background: url(images/arrow.gif) no-repeat 97% 50%;
 }
-        
-#menu-v-root a.arrow
-{
-    background-image:url(images/arrow.gif);
-    background-repeat: no-repeat;
-    background-position: 97% 50%;
-}
-#menu-v-root li:hover, #menu-v-root li.onhover
-{
-    background-position:0 -62px;
-    
-}
-#menu-v-root ul li
-{
+
+
+
+.menu_categories ul li {
     background: rgba(255, 255, 255, 0.86);
-    background-image:none;
-}
-#menu-v-root ul li:hover, #menu-v-root ul li.onhover
-{
-    background: #FFF;
-    background-image:none;
-    
-}
-        
-/* Holly Hack for IE \
-* html #menu-v-root  li
-{
-    float:left;
-    height: 1%;
-}
-* html #menu-v-root  li a
-{
-    height: 1%;
-}*/
-/* End */
-
-
-
-a.buttonStartMenu {
-  z-index:10;
-  position: relative;
-  display: inline-block;
-  width: 190px;
-  height: 40px;
-  line-height: 40px;
-  vertical-align: middle;
-  text-align: center;
-  text-decoration: none;
-  text-shadow: 0 -1px 1px #777;
-  color: #FFF;
-  outline: none;
-  border: 2px solid #F64C2B;
-  border-radius: 5px;
-/*  box-shadow: 0 0 0 60px rgba(0,0,0,0) inset, .1em .1em .2em #800;*/
-  background: linear-gradient(#FB9575, #F45A38 48%, #EA1502 52%, #F02F17);
-  cursor:default;
-/*  top: .3em;*/
-  left: .3em;
-  box-shadow: 0 0 0 60px rgba(0,0,0,.05) inset;
-  
-  
-
-}
-a.buttonStartMenu:active {
- /* top: .3em;*/
-  left: .3em;
-  box-shadow: 0 0 0 60px rgba(0,0,0,.05) inset;
+    background-image: none;
 }
 
-a.buttonStartMenu:hover {
-  /*top: .3em;*/
-  left: .3em;
-  box-shadow: 0 0 0 60px rgba(0,0,0,.05) inset;
+.menu_categories ul li:hover, .menu_categories ul li.onhover {
+    background: #FFF none;
+
 }
 
+.buttonStartMenu {
+
+    position: relative;
+    display: inline-block;
+    width: 190px;
+    height: 40px;
+    line-height: 40px;
+    vertical-align: middle;
+    text-align: center;
+    text-decoration: none;
+    text-shadow: 0 -1px 1px #777;
+    color: #FFF;
+    outline: none;
+    border: 2px solid #F64C2B;
+    border-radius: 5px;
+    text-transform: uppercase;
+    background: linear-gradient(#FB9575, #F45A38 48%, #EA1502 52%, #F02F17);
+    cursor: default;
+    left: .3em;
+    box-shadow: 0 0 0 60px rgba(0, 0, 0, .05) inset;
+    z-index: 10;
+
+}
+
+.buttonStartMenu:active,
+.buttonStartMenu:hover{
+    left: .3em;
+    box-shadow: 0 0 0 60px rgba(0, 0, 0, .05) inset;
+}
