--- a/stylesheets/media.css
+++ b/stylesheets/media.css
@@ -21,18 +21,38 @@
 
 /* Small Devices, Tablets 768px */
 @media only screen and (max-width: 768px) {
+    .header{
+        background-color: #9fcea0;
+        margin-bottom: 35px;
+    }
+    .block_ssearch{
+        display: none;
+
+        position: absolute;
+        top: 57px;
+        left: 35%;
+        max-width:300px;
+
+    }
+    .searchtext_def{
+        width: 75%;
+    }
 
 
 }
 
 @media only screen and (max-width: 600px) {
 
-
+.root-logo{
+    width: 100px;
+}
 }
 
 /* Extra Small Devices, Phones 480px */
 @media only screen and (max-width: 480px) {
-
+    .block_ssearch{
+        left: 15%;
+    }
 
 }
 
