--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -170,6 +170,21 @@ button {
 .blok_main_1 {
   min-width: 250px;
 }
+.blok_main_1.category_menu .left-group-menu{
+  display: none;
+}
+
+.category_menu .buttonStartMenu:hover + .left-group-menu{
+  display: block;
+  position: absolute;
+  z-index:9;
+}
+
+.blok_main_1.category_menu .left-group-menu:hover {
+  display: block;
+}
+
+
 
 .blok_main_2 {
   width: 100%;
@@ -283,7 +298,6 @@ button {
 .addbuttonNowInBasket:hover {
   background-color: #33F;
   border-radius: 3px;
-
 }
 
 .nojs {
@@ -374,6 +388,7 @@ button {
 
 .menu_categories {
   position: relative;
+  top: 0;
   border: 1px solid #ccc;
   border-top: none;
   margin: 0;
@@ -387,10 +402,10 @@ button {
   border-top: 1px solid #ccc;
   text-align: left;
   padding-left: 15px;
+  padding-right:5px;
   color: #06C;
   font-size: 14px;
   line-height: 35px;
-
   text-decoration: none;
 }
 
@@ -436,29 +451,31 @@ button {
   line-height: 40px;
   vertical-align: middle;
   text-align: center;
+  text-transform: uppercase;
   text-decoration: none;
   text-shadow: 0 -1px 1px #777;
   color: #FFF;
   outline: none;
   border: 2px solid #F64C2B;
   border-radius: 5px;
-  text-transform: uppercase;
+  box-shadow: 0 0 0 60px rgba(0,0,0,0) inset, 0.1em 0.1em 0.2em #800;
   background: linear-gradient(#FB9575, #F45A38 48%, #EA1502 52%, #F02F17);
   cursor: default;
-  left: .3em;
-  box-shadow: 0 0 0 60px rgba(0, 0, 0, .05) inset;
   z-index: 10;
+
+  &:hover{
+    /* top: .3em; */
+    color: #fff;
+    text-decoration: none;
+    left: .3em;
+    box-shadow: 0 0 0 60px rgba(0,0,0,.05) inset;
+  }
+  &:active{
+    color: #66FF99;
+  }
+
 }
 
-.buttonStartMenu:hover .left-group-menu {
-  display: block;
-}
-
-.buttonStartMenu:active,
-.buttonStartMenu:hover {
-  left: .3em;
-  box-shadow: 0 0 0 60px rgba(0, 0, 0, .05) inset;
-}
 
 .binfo_image {
 
@@ -1637,6 +1654,13 @@ button {
   }
 }
 
+.footer .cell-group_m1 img{
+  width: 30px;
+  height: 32px;
+}
+
+
+
 .top-line-adr {
 
   font-family: Arial, Helvetica, sans-serif;
@@ -2477,10 +2501,7 @@ button {
 }
 
 .one_search_rest {
-  /*	position:relative;
-  float:left;
-*/
-  font-family: "MS Sans Serif", Verdana, Helvetica, Arial;
+
   font-size: 12px;
   color: #093;
   font-style: normal;
@@ -2490,9 +2511,7 @@ button {
 }
 
 .one_search_norest {
-  /*	position:relative;
-  float:left;*/
-  font-family: "MS Sans Serif", Verdana, Helvetica, Arial;
+
   font-size: 12px;
   color: #999;
   font-style: normal;
@@ -2647,13 +2666,26 @@ button {
 }
 
 .subgr-item-dv {
-
+  position: relative;
   text-align: left;
   height: 25px;
   width: 190px;
-  max-width: 190px;
-  text-overflow: ellipsis;
 }
+
+.blok_main_2_1_x_about_item:hover{
+  position: relative;
+  float: left;
+  width: 100%;
+  overflow: visible;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -moz-box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  -webkit-box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+
+
 
 .blok_main_2_1_x_about_item:hover .subgr-list-block {
   border-bottom: 1px solid #c3c3c3;
@@ -2668,6 +2700,17 @@ button {
   background: #fff;
   color: #06C;
   text-decoration: none;
+
+  width: 190px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.subgr-item-dv:hover .subgr-list-item{
+  position: absolute;
+  width:auto;
+  background-color: #fff;
+  z-index:8;
 }
 
 .subgr-list-item:hover {
@@ -2688,6 +2731,9 @@ button {
   width: 50%;
 }
 
+
+
+
 .about_item_im_fon {
   position: absolute;
   top: 0;
@@ -2706,13 +2752,10 @@ button {
   height: 300px;
   padding: 5px 5px 10px;
   border-radius: 1px;
+  box-sizing: border-box;
   box-shadow: 0 0 1px rgba(0, 0, 0, 0.5);
   overflow: hidden;
   z-index: 3;
-}
-
-.blok_main_2_1_x_about_item:hover {
-  overflow: visible;
 }
 
 .blok_main_2_1_x_about_item:hover .about_item_text_hlim {
@@ -2769,11 +2812,6 @@ button {
   bottom: 0;
   height: 30px;
   background: #fff;
-  background: -moz-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 80%, rgba(255, 255, 255, 1) 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(255, 255, 255, 0)), color-stop(80%, rgba(255, 255, 255, 1)), color-stop(100%, rgba(255, 255, 255, 1)));
-  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 80%, rgba(255, 255, 255, 1) 100%);
-  background: -o-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 80%, rgba(255, 255, 255, 1) 100%);
-  background: -ms-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 80%, rgba(255, 255, 255, 1) 100%);
   background: linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 80%, rgba(255, 255, 255, 1) 100%);
 }
 
@@ -3008,8 +3046,6 @@ label.css-label {
   position: absolute;
   top: 0;
   right: 0;
-
-  font-family: "MS Sans Serif", Verdana, Helvetica, Arial;
   font-size: 14px;
   color: #8DAEBF;
   font-style: normal;
@@ -3019,7 +3055,6 @@ label.css-label {
 }
 
 .bl_breadcrumbs__link {
-  font-family: "MS Sans Serif", Verdana, Helvetica, Arial;
   font-size: 14px;
   color: #8DAEBF;
   font-style: normal;
@@ -3065,10 +3100,7 @@ label.css-label {
   margin-left: 5px;
   background-color: #AAE9FF;
   display: block;
-  font-family: "MS Sans Serif", Verdana, Helvetica, Arial, sans-serif;
   font-size: 14px;
-  -webkit-border-radius: 10px 10px 10px 10px;
-  -moz-border-radius: 10px 10px 10px 10px;
   border-radius: 10px 10px 10px 10px;
   white-space: nowrap;
   padding: 0 10px;
@@ -3119,28 +3151,19 @@ label.css-label {
 }
 
 .left-group-menu {
-  position: relative;
+  //position: relative;
+  position: absolute;
   width: 100%;
+
   word-wrap: break-word;
   color: #06C;
   font-weight: normal;
   font-size: 14px;
-  font-family: Verdana, Arial, Helvetica, sans-serif;
   text-decoration: none;
   font-style: normal;
   background: #fff;
-
-  padding: 0;
-  margin-left: 5px;
-  margin-top: 0;
-
 }
 
-.left-group-menu-hid {
-  display: none;
-  /*visibility:hidden;*/
-  /*hidden;*/
-}
 
 .left-group-menu2 {
   padding-top: 1px;
@@ -3498,17 +3521,40 @@ label.css-label {
   margin-top: 7px;
   margin-bottom: 7px;
 }
+.left_cascad__item{
+  position: relative;
+  margin-top: 5px;
+  text-indent: 15px;
+  color: #006699;
+  font-size: 14px;
+  &:before{
+    position: absolute;
+    top: 0;
+    left: -15px;
+    content: "<";
+    color: inherit;
+
+  }
+  &:hover{
+    color: #CC0000;
+    text-decoration: underline;
+  }
+
+}
+
+
+
+
 
 .left_cascad_line {
-  font-family: "MS Sans Serif", Verdana, Helvetica, Arial;
-  font-size: 14px;
-  color: #006699;
+  width: 100%;
+  display: block;
+  color: inherit;
   font-style: normal;
   text-decoration: none
 }
 
 .left_cascad_line:hover {
-  font-family: "MS Sans Serif", Verdana, Helvetica, Arial;
   font-size: 14px;
   color: #CC0000;
   font-style: normal;
